--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -3,7 +3,7 @@
     //Hamburger Open Styles
     &.open {
 
-        .header__menu {
+        .header__toggle {
             >span:first-child {
                 //top line
                 transform: rotate(45deg);
@@ -24,17 +24,18 @@
     .overlay {
         opacity: 0;
         position: fixed;
-        top: 4rem;
-        right: 0rem;
-        bottom: 0rem;
-        left: 0rem;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         background-image: linear-gradient($darkBlue, transparent);
-      
     }
 
     nav {
-        padding: 1.125rem 1.5rem;
-
+        position: relative;
+        background-color: $white;
+        padding-top: 1.125rem;
+        padding-bottom: 1.125rem;
     }
 
     &__logo {
@@ -44,7 +45,7 @@
         }
     }
 
-    &__menu {
+    &__toggle {
 
         //Mobile Menu
         >span {
@@ -59,8 +60,25 @@
                 margin-bottom: .25rem;
             }
         }
+    }
+
+    &__menu {
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: $white;
+        margin-top: 1.5rem;
+        padding: 2rem;
+        border-radius: .25rem;
 
 
+        a {
+            display: block;
+            color: $darkBlue;
+            padding: .75rem;
+            text-align: center;
+        }
     }
 
     &__links {
