--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -27,9 +27,52 @@ h1,
 h2,
 h3 {
     margin-top: 0;
+    line-height: 2.375rem;
+    font-weight: 300;
+    color: $darkBlue;
+}
+
+h1 {
+    font-size: 2.5rem;
+    letter-spacing: -0.044643rem;
+    margin-bottom: 1rem;
+
+    @include breakpoint-up(large) {
+        font-size: $font-xlg;
+        line-height: 4rem;
+        letter-spacing: -1px;
+    }
+}
+
+h2 {
+    font-size: 2rem;
+    letter-spacing: -0.035714rem;
+    text-align: center;
+
+    @include breakpoint-up(large) {
+        font-size: 2.5rem;
+        line-height: 4rem;
+        letter-spacing: -0.044643rem;
+        text-align: left;
+        margin-bottom: 1rem;
+    }
 }
 
 
+p {
+    line-height: 1.5625rem;
+    font-size: .9375rem;
+    letter-spacing: -0.014648rem;
+    margin-bottom: 2rem;
+    text-align: center;
+
+    @include breakpoint-up(large) {
+        font-size: $font-med;
+        line-height: 1.75rem;
+        letter-spacing: -0.017578rem;
+        text-align: left;
+    }
+}
 
 a,
 a:visited,
@@ -40,19 +83,29 @@ a:hover {
 
 //Spacing
 .container {
-    max-width: 69.375rem;
+    max-width: 69.375rem; //1110px
     margin: 0 auto;
 
     &--pall {
-        padding-top: 2.5rem;
-        padding-bottom: 2.5rem;
+        padding-top: 4rem;
+        padding-bottom: 4rem;
         padding-right: 1.5rem;
         padding-left: 1.5rem;
+
+        @include breakpoint-up (large) {
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
     }
 
     &--py {
-        padding-top: 2.5rem;
-        padding-bottom: 2.5rem;
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+
+        @include breakpoint-up (large) {
+            padding-top: 6rem;
+            padding-bottom: 6rem;
+        }
     }
 
     &--px {
@@ -61,7 +114,12 @@ a:hover {
     }
 
     &--pt {
-        padding-top: 2.5rem;
+        padding-top: 4rem;
+
+        @include breakpoint-up (large) {
+            padding-top: 6rem;
+
+        }
     }
 
     &--pr {
@@ -69,7 +127,11 @@ a:hover {
     }
 
     &--pb {
-        padding-bottom: 2.5rem;
+        padding-bottom: 4rem;
+
+        @include breakpoint-up (large) {
+            padding-bottom: 6rem;
+        }
     }
 
     &--pl {
