--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -6,8 +6,10 @@ $grayishBlue: hsl(233, 8%, 62%);
 $lightGrayishBlue: hsl(220, 16%, 96%);
 $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
+$aquaGreen: #30C88F;
 
 //Font Sizes
 $font-med:1.125rem; // 18px
 $font-sm: 0.875rem; // 14px
+$font-smed: .9375rem; //15px
 $font-xlg: 3.5rem; // 56px
