--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -92,6 +92,7 @@ body {
   font-size: 1.125rem;
   color: #9698a6;
   line-height: 1.3;
+  overflow-x: hidden;
 }
 
 body.noScroll {
@@ -117,7 +118,7 @@ h1 {
   h1 {
     font-size: 3.5rem;
     line-height: 4rem;
-    letter-spacing: -1px;
+    letter-spacing: -0.0625rem;
   }
 }
 
@@ -220,8 +221,16 @@ a:hover {
   }
 }
 
-.container--pl {
+.container--plr {
   padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+@media (min-width: 64em) {
+  .container--plr {
+    padding-left: 1.5rem;
+    padding-right: 0;
+  }
 }
 
 .flex {
@@ -251,7 +260,7 @@ a:hover {
 button,
 .button {
   padding: .5rem 2.125rem .5rem 2.0625rem;
-  background: linear-gradient(135deg, #31d35c 0%, #2bb7da 99.58%);
+  background-image: linear-gradient(135deg, #31d35c 0%, #2bb7da 99.58%);
   border: 0;
   border-radius: 1.375rem;
   cursor: pointer;
@@ -263,11 +272,27 @@ button,
   -webkit-transition: opacity 200ms ease-in-out;
   transition: opacity 200ms ease-in-out;
   display: inline-block;
+  position: relative;
+  overflow: hidden;
 }
 
-button:hover,
-.button:hover {
-  opacity: 0.4;
+button::before,
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  opacity: 0;
+  -webkit-transition: opacity 150ms ease-in-out;
+  transition: opacity 150ms ease-in-out;
+}
+
+button:hover::before,
+.button:hover::before {
+  opacity: 1;
 }
 
 @media (max-width: 63.9375em) {
@@ -280,6 +305,11 @@ button:hover,
   .hide-for-desktop {
     display: none;
   }
+}
+
+.header {
+  position: relative;
+  z-index: 1;
 }
 
 .header.open .header__toggle > span:first-child {
@@ -529,13 +559,13 @@ button:hover,
 
 @media (min-width: 64em) {
   .feature__grid {
-    width: 1110px;
+    width: 69.375rem;
   }
 }
 
 .feature__item {
   text-align: center;
-  margin-bottom: 32px;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 40em) {
@@ -580,16 +610,279 @@ button:hover,
 }
 
 .feature__description {
-  font-size: 15px;
-  line-height: 25px;
-  letter-spacing: -0.234375px;
+  font-size: .9375rem;
+  line-height: 1.5625rem;
+  letter-spacing: -0.014648rem;
 }
 
 @media (min-width: 64em) {
   .feature__description {
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: -0.25px;
+    font-size: 1rem;
+    line-height: 1.625rem;
+    letter-spacing: -0.015625rem;
+  }
+}
+
+.articles {
+  background-color: #fafafa;
+}
+
+.article__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  gap: 1.5rem;
+}
+
+@media (min-width: 40em) {
+  .article__grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 64em) {
+  .article__grid {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    gap: 1.875rem;
+    width: 69.375rem;
+  }
+}
+
+.article__item {
+  border-radius: .3125rem;
+  overflow: hidden;
+  background-color: white;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+
+.article__item:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.article__image {
+  height: 12.5rem;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.article__text {
+  background-color: white;
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+  color: #9698a6;
+}
+
+@media (min-width: 40em) {
+  .article__text {
+    padding: 1.5rem;
+  }
+}
+
+.article__author {
+  font-size: .625rem;
+  line-height: 1.125rem;
+  letter-spacing: -0.009766rem;
+  margin-bottom: .5rem;
+}
+
+.article__title {
+  font-size: 1rem;
+  line-height: 1.25rem;
+  font-weight: 300;
+  letter-spacing: -0.017857rem;
+  color: #2d314d;
+  margin-bottom: .5rem;
+}
+
+.article__title:hover {
+  color: #30C88F;
+}
+
+.article__description {
+  font-size: .8125rem;
+  line-height: 1.125rem;
+  letter-spacing: -0.012695rem;
+}
+
+.footer {
+  background-color: #2d314d;
+  color: white;
+  padding: 2.5rem;
+  text-align: center;
+}
+
+@media (min-width: 64em) {
+  .footer {
+    padding: 3rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr 1fr 1fr 2fr;
+        grid-template-columns: 2fr 1fr 1fr 2fr;
+    -ms-grid-rows: 1fr auto;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: "logo links1 links2 cta"
+ "social links1 links2 copyright";
+    justify-items: start;
+  }
+}
+
+.footer a {
+  color: white;
+}
+
+.footer__logo {
+  display: inline-block;
+}
+
+@media (max-width: 63.9375em) {
+  .footer__logo {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__logo {
+    grid-area: logo;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__social {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+  }
+}
+
+.footer__social a {
+  display: inline-block;
+}
+
+.footer__social svg path {
+  -webkit-transition: fill 150ms ease-in-out;
+  transition: fill 150ms ease-in-out;
+}
+
+.footer__social a:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.footer__social a:hover svg path {
+  fill: #30C88F;
+}
+
+.footer__social svg {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+@media (min-width: 40em) {
+  .footer__social svg {
+    height: 1.25rem;
+    width: 1.5rem;
+  }
+}
+
+.footer__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 0.9375rem;
+  letter-spacing: -0.014648rem;
+}
+
+@media (min-width: 64em) {
+  .footer__links {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col1 {
+    grid-area: links1;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__links.col2 {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col2 {
+    grid-area: links2;
+  }
+}
+
+.footer__links a {
+  line-height: 2.25rem;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+
+.footer__links a:hover {
+  color: #30C88F;
+}
+
+@media (min-width: 64em) {
+  .footer__cta {
+    text-align: right;
+    grid-area: cta;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
+@media (max-width: 63.9375em) {
+  .footer__cta a.button {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.footer__copyright {
+  font-size: 0.9375rem;
+  letter-spacing: -0.014648rem;
+  opacity: 0.5;
+}
+
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    -ms-grid-column-align: end;
+        justify-self: end;
   }
 }
 /*# sourceMappingURL=style.css.map */
